force-app/main/default/objects/PMHR_Hero__c/PMHR_Hero__c.object-meta.xml
<CustomObject>
    <label>Hero</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Heroes</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>