force-app/main/default/objects/PMHR_Hero__c/fields/GameVersion__c.field-meta.xml
<CustomField>
    <fullName>GameVersion__c</fullName>
    <label>Game Version</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PMHR_PokemonGameVersion</valueSetName>
    </valueSet>
</CustomField>