force-app/main/default/objects/PMHR_Hero__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>GameVersion__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Kanto</fullName>
            </value>
            <value>
                <fullName>Johto</fullName>
            </value>
            <value>
                <fullName>Hoenn</fullName>
            </value>
            <value>
                <fullName>Sinnoh</fullName>
            </value>
            <value>
                <fullName>Unova</fullName>
            </value>
            <value>
                <fullName>Kalos</fullName>
            </value>
            <value>
                <fullName>Alola</fullName>
            </value>
            <value>
                <fullName>Galar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>