force-app/main/default/objects/PMHR_Hero__c/fields/RivalName__c.field-meta.xml
<CustomField>
    <fullName>RivalName__c</fullName>
    <label>Rival Name</label>
    <length>12</length>
    <type>Text</type>
</CustomField>