force-app/main/default/objects/PMHR_Hero__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Gender__c</columns>
    <columns>Region__c</columns>
    <columns>GameVersion__c</columns>
    <columns>RivalName__c</columns>
    <filterScope>Mine</filterScope>
    <label>All</label>
</ListView>